syntax = "proto3";

option go_package = "github.com/BetterGR/homework-microservice/protos";

package Homework;

/*
The Homework domain manages all information related to assignments for each course,
including workflows for completing homework and submission tracking.
 */
service HomeworkService {
    // Returns homework by Id.
    rpc GetHomework(GetHomeworkRequest) returns (GetHomeworkResponse);
    // Creates a new homework for a certain course.
    rpc CreateHomework(CreateHomeworkRequest) returns (CreateHomeworkResponse);
    // Updates a homework for a certain course.
    rpc UpdateHomework(UpdateHomeworkRequest) returns (UpdateHomeworkResponse);
    // Deletes a homework for a certain course.
    rpc DeleteHomework(DeleteHomeworkRequest) returns (DeleteHomeworkResponse);
}

// Request message for getting homework containing the course id.
message GetHomeworkRequest {
    string token = 1;
    string id = 2;
}

// Response message containing the homework for said course.
message GetHomeworkResponse {
    Homework hw = 1;
}

// Request message for creating new homework.
message CreateHomeworkRequest {
    string token = 1;
    Homework homework = 2;
}

// Boolean response to give feedback in case the function failed.
message CreateHomeworkResponse {
    Homework hw = 1;
}

// Request message for updating a homework.
message UpdateHomeworkRequest {
    string token = 1;
    Homework homework = 2;
}

// Response message for updating a homework.
message UpdateHomeworkResponse {
    Homework hw = 1;
}

// Request message for deleting a homework.
message DeleteHomeworkRequest {
    string token = 1;
    string id = 2;
}

// Response message for deleting a homework.
message DeleteHomeworkResponse {
}

// Request message for submitting a homework.
message SubmitHomeworkRequest {
    string token = 1;
    string id = 2;
    Submission submission = 3;
}

// Response message for submitting a homework.
message SubmitHomeworkResponse {
    Submission submission = 1;
}

// Request message to retrieve all submissions for a homework.
message GetSubmissionsRequest {
    string token = 1;
    string homeworkId = 2;
}

// Response message containing all submissions for a homework.
message GetSubmissionsResponse {
    repeated Submission submissions = 1;
}

// Request message for getting submissions of a specific student.
message GetStudentSubmissionsRequest {
    string token = 1;
    string studentId = 2;
}

// Response message containing all submissions of a specific student.
message GetStudentSubmissionsResponse {
    repeated Submission submissions = 1;
}

// Message representing Homework details.
message Homework {
    string token = 1;
    string id = 2;
    string courseId = 3;
    string title = 4;
    string description = 5;
    repeated File files = 6;
    string workflow = 7;
    string dueDate = 8;
    repeated Submission submissions = 9;
}

// Message representing a File.
message File {
    string token = 1;
    string filename = 2;
    bytes content = 3;
    string mimeType = 4;
}

// Message representing the workflow.
message Workflow {
    string token = 1;
    repeated string steps = 2;
}

// Message representing a student Submission.
message Submission {
    string token = 1;
    string studentId = 2;
    string submissionTime = 3;
    File submissionFile = 4;
    repeated string partnersId = 5;
}
